--- a/src/code.less
+++ b/src/code.less
@@ -1,13 +1,17 @@
 .ace_editor {
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-.editor-wrapper {
-  padding: 16px;
+  // border: 1px solid #ccc;
+  // border-radius: 4px;
 }
 
 #app .ant-layout {
   background-color: #fff;
 }
 
+.card-header {
+  background-color: #0f405a;
+  color: #fff;
+  font-size: 18px;
+  display: flex;
+  padding: 0 1em;
+  justify-content: space-between;
+}
