--- a/src/code.less
+++ b/src/code.less
@@ -1,10 +1,19 @@
+#app {
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+}
+.sqlpad-content {
+  max-width: 800px;
+  min-height: 600px;
+}
+
 .ace_editor {
   // border: 1px solid #ccc;
   // border-radius: 4px;
 }
 
 #app .ant-layout {
-  background-color: #fff;
 }
 
 .card-header {
